[package]
name = "statistics"
version = "0.1.0"
authors = ["redzic <yusufredzic@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.3.0"
rug = "1.6.0"
# TODO experiment with criterion for benchmarking