[package]
name = "statistics"
version = "0.1.0"
authors = ["redzic <yusufredzic@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false

[dependencies]
rayon = "1.3.0"
rug = "1.7.0"
libc = "0.2.66"
